--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </footer>
 </div>
 <div class="firma">
-<h4>&copy;2022 por Karin Centenaro - <img src="icons8-web-hook-48.png" alt = "logo empresa"> WD Design Solutions </h4>
+<h4>&copy;2022 por Karin Centenaro - <img src="icons8-web-hook-48.png" alt = "logo empresa"> WD We Code Design Solutions </h4>
 </div>
 
 </body>
