--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="tarjeta2"> 
             <div class="photo">
                 <img src="smoke.jfif" alt="guerrero videojuego"> 
-                <a href="file:///C:/Users/Karin/Documents/TRABAJO_PRACTICO/index.html">Selecion Personage Gamer</a>
+                <a href="https://selector-personage.vercel.app/">Selecion Personage Gamer</a>
             </div>
     </div>
 
