--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
     <div class="card2"> 
             <div class="photo">
-                <img src="musica.png" alt="icono nota musical"> 
-                <a href="https://music-app-woad-delta.vercel.app/">App Música</a>
-            </div>
+                <img src="back_down.jfif" alt="frase nunca retroceda never backdown"> 
+                <a href="https://english-page.vercel.app/">Pagina Tarjetas Inglés</a>
+                </div>
     </div>
 
 </section>
