--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </svg></a>
                     <a href="mailto:centenarokarin7@gmail.com"><img src="icon_email.png" alt="arroba_icono email"
                         alt="sobre icono email"></a>
-                        <a href="https://www.youtube.com/"> <i class="fab fa-youtube"> <a href="https://www.youtube.com/"> </a> </i>
+                       <i class="fab fa-youtube">  <a href="https://www.youtube.com/"> </a> </i>
 
 
             </div>
