--- a/index.html
+++ b/index.html
@@ -200,24 +200,25 @@
                         xmlns:xlink="https://www.linkedin.com/in/karin-centenaro-98652a229/" width="28" height="28"
                         viewBox="0 0 172 172" style=" fill:#000000;">
                         <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                            style="mix-blend-mode: normal">
-                            <path d="M0,172v-172h172v172z" fill="none"></path>
-                            <path
-                                d="M86,172c-47.49649,0 -86,-38.50351 -86,-86v0c0,-47.49649 38.50351,-86 86,-86v0c47.49649,0 86,38.50351 86,86v0c0,47.49649 -38.50351,86 -86,86z"
-                                fill="#cccccc"></path>
-                            <g fill="#000000">
-                                <path
+                         stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                         font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                          style="mix-blend-mode: normal">
+                           path d="M0,172v-172h172v172z" fill="none"></path>
+                           <path
+                            d="M86,172c-47.49649,0 -86,-38.50351 -86,-86v0c0,-47.49649 38.50351,-86 86,-86v0c47.49649,0 86,38.50351 86,86v0c0,47.49649 -38.50351,86 -86,86z"
+                            fill="#cccccc"></path>
+                             <g fill="#000000">
+                              <path
                                     d="M40.03484,26.17759c-9.3823,0 -16.19659,5.62249 -16.19659,13.35546c0,7.76 6.97652,13.63006 16.19659,13.63006c9.3823,0 16.19659,-5.73107 16.19659,-13.78849c-0.43261,-7.76 -7.11171,-13.19703 -16.19659,-13.19703zM26.51568,58.59718c-1.48711,0 -2.70383,1.21672 -2.70383,2.70383v78.41115c0,1.48711 1.21672,2.70383 2.70383,2.70383h27.03833c1.48711,0 2.70383,-1.21672 2.70383,-2.70383v-78.41115c0,-1.48711 -1.21672,-2.70383 -2.70383,-2.70383zM67.07317,58.59718c-1.48711,0 -2.70383,1.21672 -2.70383,2.70383v78.41115c0,1.48711 1.21672,2.70383 2.70383,2.70383h24.3345c1.49252,0 2.70383,-1.21132 2.70383,-2.70383v-40.55749v-0.67596v-0.67596c0,-6.40808 4.92267,-11.62775 11.19556,-12.11444c0.32446,-0.05408 0.64723,-0.05281 0.97169,-0.05281c0.32446,0 0.64723,-0.00127 0.97169,0.05281c6.27289,0.48669 11.19556,5.70636 11.19556,12.11444v41.90941c0,1.49252 1.21132,2.70383 2.70383,2.70383h24.3345c1.48711,0 2.70383,-1.21672 2.70383,-2.70383v-45.96516c0,-17.4938 -9.38483,-35.14983 -30.3125,-35.14983c-9.51749,0 -16.70715,3.67785 -21.06032,6.73318v-4.02934c0,-1.48711 -1.21672,-2.70383 -2.70383,-2.70383z">
-
                                 </path>
-                            </g>
-                        </g> <a href="https://www.linkedin.com/in/karin-centenaro-98652a229/">
-                    </svg></a>
+                                </g>
+                              </g>
+                           </svg></a>
+                    
                     <a href="mailto:centenarokarin7@gmail.com"><img src="icon_email.png" alt="arroba_icono email"
                         alt="sobre icono email"></a>
-                       <i class="fab fa-youtube">  <a href="https://www.youtube.com/"> </a> </i>
+                    
+                       <i class="fab fa-youtube"><a href="https://www.youtube.com/"> </a> </i>
 
 
             </div>
